--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <div id="wrapper">
 
 <!-- Header -->
-<header id="header" class="alt">
+<header id="header"class="alt">
 	<a href="/" class="logo"><strong>Atom</strong> <span>Digital</span></a>
 	<nav>
 		<a href="#menu">Menu</a>
@@ -42,64 +42,7 @@
 
 <!-- Menu -->
 <nav id="menu">
-	<ul class="links">
-		
-		
-			
-		
-			
-		
-			
-		
-			
-		
-			
-		
-			
-		
-			
-				<li><a href="/" class="link">Home</a></li>
-			
-		
-			
-		
-			
-		
-			
-		
-			
-		
-		
-		
-			
-		
-			
-		
-			
-		
-			
-		
-			
-		
-			
-		
-			
-				<li><a href="/what-we-do/">What we do</a></li>
-			
-		
-			
-				<li><a href="/services/">Our Services</a></li>
-			
-		
-			
-				<li><a href="/examples-of-digital-transformation/">Examples</a></li>
-			
-		
-			
-				<li><a href="/about/">About Us</a></li>
-			
-		
-	</ul>
+	<ul class="links"><li><a href="/" class="link">Home</a></li><li><a href="/what-we-do/">What we do</a></li><li><a href="/services/">Our Services</a></li><li><a href="/examples-of-digital-transformation/">Examples</a></li><li><a href="/about/">About Us</a></li></ul>
 	<ul class="actions vertical">
 		<li><a href="#contact-us" class="button special fit">Contact Us</a></li>
 		<!--<li><a href="#" class="button fit">Log In</a></li>-->
@@ -126,10 +69,7 @@
     <div id="main">
 
         <!-- One -->
-        
-<section id="one" class="tiles">
-  
-  <article>
+        <section id="one" class="tiles"><article>
     <a href="/what-we-do/" class="link">
       <span class="image">
         <img src="" alt="What we do" />
@@ -139,9 +79,7 @@
         <p>We help our clients to adopt digital tools and services that increase sales, reduce costs and improve productivity.</p>
       </header>
   </a>
-  </article>
-  
-  <article>
+  </article><article>
     <a href="/services/" class="link">
       <span class="image">
         <img src="" alt="Our Services" />
@@ -151,9 +89,7 @@
         <p>Working with ATOM Digital gives our clients access to specialists, technical resources.</p>
       </header>
   </a>
-  </article>
-  
-  <article>
+  </article><article>
     <a href="/examples-of-digital-transformation/" class="link">
       <span class="image">
         <img src="" alt="Examples" />
@@ -163,9 +99,7 @@
         <p>There are many ways that ATOM Digital can help.<br> Here are just some of them</p>
       </header>
   </a>
-  </article>
-  
-  <article>
+  </article><article>
     <a href="/about/" class="link">
       <span class="image">
         <img src="" alt="About Us" />
@@ -175,9 +109,7 @@
         <p>About ATOM Digital<br>Business Software Consultancy</p>
       </header>
   </a>
-  </article>
-  
-</section>
+  </article></section>
 
 
         <!-- Two -->
@@ -315,14 +247,6 @@
 
 </div>
 
-<!-- Scripts -->	
-	<script src="/assets/js/jquery.min.js"></script>
-	<script src="/assets/js/jquery.scrolly.min.js"></script>
-	<script src="/assets/js/jquery.scrollex.min.js"></script>
-	<script src="/assets/js/skel.min.js"></script>
-	<script src="/assets/js/util.js"></script>
-	<!--[if lte IE 8]><script src="/assets/js/ie/respond.min.js"></script><![endif]-->
-	<script src="/assets/js/main.js"></script> -->
 
 
 </body>
