--- a/landing/index.html
+++ b/landing/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
+<html lang="en-AU">
 <!--
-	Forty by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
-<html>
+    Hey! Thanks for checking out the source code for this site.
 
-    <head>
+    Are you interested in working with ATOM Digital? 
+    Why not contact us through the website or LinkedIn to start
+    a conversation. We are always interested in talking to like minded
+    tech people.
+
+    This site is a modified version of forty-jekyll-theme
+     - https://github.com/andrewbanchich/forty-jekyll-theme
+     - Attribution in footer
+    We use this as it is a very fast, lightweight and free way to build
+    a professional services website.
+-->
+<head>
 	<title>Landing | Atom Digital</title>
 	<meta name="description" content="Atom">
 	<meta charset="utf-8" />
@@ -19,13 +27,13 @@
 </head>
 
 
-    <body>
+<body>
 
-        <!-- Wrapper -->
+    <!-- Wrapper -->
 <div id="wrapper">
 
 <!-- Header -->
-<header id="header" class="alt style2">
+<header id="header"class="alt style2">
 	<a href="/" class="logo"><strong>Atom</strong> <span>Digital</span></a>
 	<nav>
 		<a href="#menu">Menu</a>
@@ -34,64 +42,7 @@
 
 <!-- Menu -->
 <nav id="menu">
-	<ul class="links">
-		
-		
-			
-		
-			
-		
-			
-		
-			
-		
-			
-		
-			
-		
-			
-				<li><a href="/" class="link">Home</a></li>
-			
-		
-			
-		
-			
-		
-			
-		
-			
-		
-		
-		
-			
-		
-			
-		
-			
-		
-			
-		
-			
-		
-			
-		
-			
-				<li><a href="/what-we-do/">What we do</a></li>
-			
-		
-			
-				<li><a href="/services/">Our Services</a></li>
-			
-		
-			
-				<li><a href="/examples-of-digital-transformation/">Examples</a></li>
-			
-		
-			
-				<li><a href="/about/">About Us</a></li>
-			
-		
-	</ul>
+	<ul class="links"><li><a href="/" class="link">Home</a></li><li><a href="/what-we-do/">What we do</a></li><li><a href="/services/">Our Services</a></li><li><a href="/examples-of-digital-transformation/">Examples</a></li><li><a href="/about/">About Us</a></li></ul>
 	<ul class="actions vertical">
 		<li><a href="#contact-us" class="button special fit">Contact Us</a></li>
 		<!--<li><a href="#" class="button fit">Log In</a></li>-->
@@ -99,23 +50,23 @@
 </nav>
 
 
-        <section id="banner" class="style2">
-            <div class="inner">
-                <span class="image">
-                    <img src="/assets/images/pic07.jpg" alt="">
-                </span>
-                <header class="major">
+    <section id="banner" class="style2">
+        <div class="inner">
+            <span class="image">
+                <img src="/assets/images/pic07.jpg" alt="">
+            </span>
+            <header class="major">
 
-                    <h1>Landing</h1>
+                <h1>Landing</h1>
 
-                </header>
-                <div class="content">
+            </header>
+            <div class="content">
 
-                    Lorem ipsum dolor sit amet nullam consequa<br />sed veroeros. tempus adipiscing nulla.
+                Lorem ipsum dolor sit amet nullam consequa<br />sed veroeros. tempus adipiscing nulla.
 
-                </div>
             </div>
-        </section>
+        </div>
+    </section>
 
     <!-- Main -->
 <div id="main">
@@ -315,14 +266,6 @@
 
 </div>
 
-<!-- Scripts -->	
-	<script src="/assets/js/jquery.min.js"></script>
-	<script src="/assets/js/jquery.scrolly.min.js"></script>
-	<script src="/assets/js/jquery.scrollex.min.js"></script>
-	<script src="/assets/js/skel.min.js"></script>
-	<script src="/assets/js/util.js"></script>
-	<!--[if lte IE 8]><script src="/assets/js/ie/respond.min.js"></script><![endif]-->
-	<script src="/assets/js/main.js"></script> -->
 
 
 </body>
