--- a/services/index.html
+++ b/services/index.html
@@ -28,13 +28,13 @@
 
 
 <body>
-    <script>document.body.classList.add("is-loading");</script>
+	<script>document.body.classList.add("is-loading");</script>
 
-    <!-- Wrapper -->
+	<!-- Wrapper -->
 <div id="wrapper">
 
 <!-- Header -->
-<header id="header">
+<header id="header"class="alt">
 	<a href="/" class="logo"><strong>Atom</strong> <span>Digital</span></a>
 	<nav>
 		<a href="#menu">Menu</a>
@@ -43,75 +43,16 @@
 
 <!-- Menu -->
 <nav id="menu">
-	<ul class="links">
-		
-		
-			
-		
-			
-		
-			
-		
-			
-		
-			
-		
-			
-		
-			
-				<li><a href="/" class="link">Home</a></li>
-			
-		
-			
-		
-			
-		
-			
-		
-			
-		
-			
-		
-		
-		
-			
-		
-			
-		
-			
-		
-			
-		
-			
-		
-			
-		
-			
-				<li><a href="/what-we-do/">What we do</a></li>
-			
-		
-			
-				<li><a href="/services/">Our Services</a></li>
-			
-		
-			
-				<li><a href="/examples-of-digital-transformation/">Examples</a></li>
-			
-		
-			
-				<li><a href="/about/">About Us</a></li>
-			
-		
-	</ul>
+	<ul class="links"><li><a href="/" class="link">Home</a></li><li><a href="/what-we-do/">What we do</a></li><li><a href="/services/">Our Services</a></li><li><a href="/examples-of-digital-transformation/">Examples</a></li><li><a href="/about/">About Us</a></li></ul>
 	<ul class="actions vertical">
 		<li><a href="#contact-us" class="button special fit">Contact Us</a></li>
 		<!--<li><a href="#" class="button fit">Log In</a></li>-->
 	</ul>
 </nav>
- 
+
 	<!-- Main -->
 	<div id="main" class="alt">
-
+		<span id="banner"></span>
 		<!-- One -->
 		<section id="one">
 			<div class="inner">
@@ -201,7 +142,7 @@
         </div> 
     </div>
 </div>
- 
+
 			</div>
 		</section>
 	</div>
@@ -322,14 +263,6 @@
 
 </div>
 
-<!-- Scripts -->	
-	<script src="/assets/js/jquery.min.js"></script>
-	<script src="/assets/js/jquery.scrolly.min.js"></script>
-	<script src="/assets/js/jquery.scrollex.min.js"></script>
-	<script src="/assets/js/skel.min.js"></script>
-	<script src="/assets/js/util.js"></script>
-	<!--[if lte IE 8]><script src="/assets/js/ie/respond.min.js"></script><![endif]-->
-	<script src="/assets/js/main.js"></script> -->
 
 
 </body>
@@ -341,4 +274,5 @@
 <script src="/assets/js/util.js"></script>
 <!--[if lte IE 8]><script src="/assets/js/ie/respond.min.js"></script><![endif]-->
 <script src="/assets/js/main.js"></script>
+
 </html>
