--- a/what-we-do/index.html
+++ b/what-we-do/index.html
@@ -28,13 +28,13 @@
 
 
 <body>
-    <script>document.body.classList.add("is-loading");</script>
+	<script>document.body.classList.add("is-loading");</script>
 
-    <!-- Wrapper -->
+	<!-- Wrapper -->
 <div id="wrapper">
 
 <!-- Header -->
-<header id="header">
+<header id="header"class="alt">
 	<a href="/" class="logo"><strong>Atom</strong> <span>Digital</span></a>
 	<nav>
 		<a href="#menu">Menu</a>
@@ -43,75 +43,16 @@
 
 <!-- Menu -->
 <nav id="menu">
-	<ul class="links">
-		
-		
-			
-		
-			
-		
-			
-		
-			
-		
-			
-		
-			
-		
-			
-				<li><a href="/" class="link">Home</a></li>
-			
-		
-			
-		
-			
-		
-			
-		
-			
-		
-			
-		
-		
-		
-			
-		
-			
-		
-			
-		
-			
-		
-			
-		
-			
-		
-			
-				<li><a href="/what-we-do/">What we do</a></li>
-			
-		
-			
-				<li><a href="/services/">Our Services</a></li>
-			
-		
-			
-				<li><a href="/examples-of-digital-transformation/">Examples</a></li>
-			
-		
-			
-				<li><a href="/about/">About Us</a></li>
-			
-		
-	</ul>
+	<ul class="links"><li><a href="/" class="link">Home</a></li><li><a href="/what-we-do/">What we do</a></li><li><a href="/services/">Our Services</a></li><li><a href="/examples-of-digital-transformation/">Examples</a></li><li><a href="/about/">About Us</a></li></ul>
 	<ul class="actions vertical">
 		<li><a href="#contact-us" class="button special fit">Contact Us</a></li>
 		<!--<li><a href="#" class="button fit">Log In</a></li>-->
 	</ul>
 </nav>
- 
+
 	<!-- Main -->
 	<div id="main" class="alt">
-
+		<span id="banner"></span>
 		<!-- One -->
 		<section id="one">
 			<div class="inner">
@@ -133,7 +74,7 @@ We act as an extension of our client’s team and provide the skills and experti
   <li>Provide coaching and training for management and key employees.</li>
   <li>Provide monitoring, maintenance and support for digital tools and services.</li>
 </ul>
- 
+
 			</div>
 		</section>
 	</div>
@@ -254,14 +195,6 @@ We act as an extension of our client’s team and provide the skills and experti
 
 </div>
 
-<!-- Scripts -->	
-	<script src="/assets/js/jquery.min.js"></script>
-	<script src="/assets/js/jquery.scrolly.min.js"></script>
-	<script src="/assets/js/jquery.scrollex.min.js"></script>
-	<script src="/assets/js/skel.min.js"></script>
-	<script src="/assets/js/util.js"></script>
-	<!--[if lte IE 8]><script src="/assets/js/ie/respond.min.js"></script><![endif]-->
-	<script src="/assets/js/main.js"></script> -->
 
 
 </body>
@@ -273,4 +206,5 @@ We act as an extension of our client’s team and provide the skills and experti
 <script src="/assets/js/util.js"></script>
 <!--[if lte IE 8]><script src="/assets/js/ie/respond.min.js"></script><![endif]-->
 <script src="/assets/js/main.js"></script>
+
 </html>
