--- a/generic/index.html
+++ b/generic/index.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
+<html lang="en-AU">
 <!--
-	Forty by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
-<html>
+    Hey! Thanks for checking out the source code for this site.
 
+    Are you interested in working with ATOM Digital? 
+    Why not contact us through the website or LinkedIn to start
+    a conversation. We are always interested in talking to like minded
+    tech people.
+
+    This site is a modified version of forty-jekyll-theme
+     - https://github.com/andrewbanchich/forty-jekyll-theme
+     - Attribution in footer
+    We use this as it is a very fast, lightweight and free way to build
+    a professional services website.
+-->
 <head>
 	<title>Generic | Atom Digital</title>
 	<meta name="description" content="Atom">
@@ -21,11 +29,11 @@
 
 <body>
 
-    <!-- Wrapper -->
+	<!-- Wrapper -->
 <div id="wrapper">
 
 <!-- Header -->
-<header id="header">
+<header id="header"class="alt">
 	<a href="/" class="logo"><strong>Atom</strong> <span>Digital</span></a>
 	<nav>
 		<a href="#menu">Menu</a>
@@ -34,94 +42,38 @@
 
 <!-- Menu -->
 <nav id="menu">
-	<ul class="links">
-		
-		
-			
-		
-			
-		
-			
-		
-			
-		
-			
-		
-			
-		
-			
-				<li><a href="/" class="link">Home</a></li>
-			
-		
-			
-		
-			
-		
-			
-		
-			
-		
-		
-		
-			
-		
-			
-		
-			
-		
-			
-		
-			
-		
-			
-		
-			
-				<li><a href="/what-we-do/">What we do</a></li>
-			
-		
-			
-				<li><a href="/services/">Our Services</a></li>
-			
-		
-			
-				<li><a href="/examples-of-digital-transformation/">Examples</a></li>
-			
-		
-			
-				<li><a href="/about/">About Us</a></li>
-			
-		
-	</ul>
+	<ul class="links"><li><a href="/" class="link">Home</a></li><li><a href="/what-we-do/">What we do</a></li><li><a href="/services/">Our Services</a></li><li><a href="/examples-of-digital-transformation/">Examples</a></li><li><a href="/about/">About Us</a></li></ul>
 	<ul class="actions vertical">
 		<li><a href="#contact-us" class="button special fit">Contact Us</a></li>
 		<!--<li><a href="#" class="button fit">Log In</a></li>-->
 	</ul>
 </nav>
- 
-    
-    
-<!-- Main -->
-<div id="main" class="alt">
 
-<!-- One -->
-<section id="one">
-	<div class="inner">
-		<header class="major">
-			<h1>Generic</h1>
-		</header>
-		<span class="image main"><img src="/assets/images/pic11.jpg" alt="" /></span>
-		<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit.</p>
+
+
+	<!-- Main -->
+	<div id="main" class="alt">
+
+		<!-- One -->
+		<section id="one">
+			<div class="inner">
+				<header class="major">
+					<h1>Generic</h1>
+				</header>
+				<span class="image main"><img src="/assets/images/pic11.jpg"
+						alt="" /></span>
+				<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit.</p>
 
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
 
 <p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
 
+			</div>
+		</section>
+
 	</div>
-</section>
 
-</div>
-
-    <!-- Contact -->
+	<!-- Contact -->
 <section id="contact">
 	<div class="inner">
 		<section id="contact-us">
@@ -238,14 +190,6 @@
 
 </div>
 
-<!-- Scripts -->	
-	<script src="/assets/js/jquery.min.js"></script>
-	<script src="/assets/js/jquery.scrolly.min.js"></script>
-	<script src="/assets/js/jquery.scrollex.min.js"></script>
-	<script src="/assets/js/skel.min.js"></script>
-	<script src="/assets/js/util.js"></script>
-	<!--[if lte IE 8]><script src="/assets/js/ie/respond.min.js"></script><![endif]-->
-	<script src="/assets/js/main.js"></script> -->
 
 
 </body>
@@ -257,4 +201,5 @@
 <script src="/assets/js/util.js"></script>
 <!--[if lte IE 8]><script src="/assets/js/ie/respond.min.js"></script><![endif]-->
 <script src="/assets/js/main.js"></script>
+
 </html>
