--- a/elements/index.html
+++ b/elements/index.html
@@ -29,7 +29,7 @@
 
 <body>
 	<script>document.body.classList.add("is-loading");</script>
-
+	
 	<!-- Wrapper -->
 <div id="wrapper">
 
@@ -52,13 +52,14 @@
 
 	<!-- Main -->
 	<div id="main" class="alt">
-		<span id="banner"></span>
 		<!-- One -->
 		<section id="one">
+			
 			<div class="inner">
 				<header class="major">
 					<h1>Elements</h1>
 				</header>
+				<span id="scroller"></span>
 				<!-- Content -->
 <h2 id="content">Sample Content</h2>
 <p>Praesent ac adipiscing ullamcorper semper ut amet ac risus. Lorem sapien ut odio odio nunc. Ac adipiscing nibh porttitor erat risus justo adipiscing adipiscing amet placerat accumsan. Vis. Faucibus odio magna tempus adipiscing a non. In mi primis arcu ut non accumsan vivamus ac blandit adipiscing adipiscing arcu metus praesent turpis eu ac lacinia nunc ac commodo gravida adipiscing eget accumsan ac nunc adipiscing adipiscing.</p>
