--- a/services/index.html
+++ b/services/index.html
@@ -29,7 +29,7 @@
 
 <body>
 	<script>document.body.classList.add("is-loading");</script>
-
+	
 	<!-- Wrapper -->
 <div id="wrapper">
 
@@ -52,13 +52,14 @@
 
 	<!-- Main -->
 	<div id="main" class="alt">
-		<span id="banner"></span>
 		<!-- One -->
 		<section id="one">
+			
 			<div class="inner">
 				<header class="major">
 					<h1>Our Services</h1>
 				</header>
+				<span id="scroller"></span>
 				<p>ATOM Digital provides our clients access to specialists, technical resources.</p>
 <p>It allows our clients to focus on what they do best -  running their business -  while we own and manage their technical landscape.</p>
 <p>Typically we help our clients to increase sales, reduce costs and improve productivity in the following ways.</p>
