--- a/what-we-do/index.html
+++ b/what-we-do/index.html
@@ -29,7 +29,7 @@
 
 <body>
 	<script>document.body.classList.add("is-loading");</script>
-
+	
 	<!-- Wrapper -->
 <div id="wrapper">
 
@@ -52,13 +52,14 @@
 
 	<!-- Main -->
 	<div id="main" class="alt">
-		<span id="banner"></span>
 		<!-- One -->
 		<section id="one">
+			
 			<div class="inner">
 				<header class="major">
 					<h1>What we do</h1>
 				</header>
+				<span id="scroller"></span>
 				<p>ATOM Digital is a business software consultancy.</p>
 
 <p>We specialise in helping SMEs and SMBs who do not have a dedicated technical resource.
