--- a/about/index.html
+++ b/about/index.html
@@ -29,7 +29,7 @@
 
 <body>
 	<script>document.body.classList.add("is-loading");</script>
-
+	
 	<!-- Wrapper -->
 <div id="wrapper">
 
@@ -52,13 +52,14 @@
 
 	<!-- Main -->
 	<div id="main" class="alt">
-		<span id="banner"></span>
 		<!-- One -->
 		<section id="one">
+			
 			<div class="inner">
 				<header class="major">
 					<h1>About Us</h1>
 				</header>
+				<span id="scroller"></span>
 				<p>ATOM Digital helps our clients to adopt digital tools and solutions that increase sales, reduce costs and improve productivity.</p>
 
 <p>We exist to make our clients’ complex software requirements simple, successful and cost effective. By partnering with ATOM Digital, you can focus on what you do best while we look after your digital landscape.</p>
