--- a/examples-of-digital-transformation/index.html
+++ b/examples-of-digital-transformation/index.html
@@ -29,7 +29,7 @@
 
 <body>
 	<script>document.body.classList.add("is-loading");</script>
-
+	
 	<!-- Wrapper -->
 <div id="wrapper">
 
@@ -52,13 +52,14 @@
 
 	<!-- Main -->
 	<div id="main" class="alt">
-		<span id="banner"></span>
 		<!-- One -->
 		<section id="one">
+			
 			<div class="inner">
 				<header class="major">
 					<h1>Examples</h1>
 				</header>
+				<span id="scroller"></span>
 				<p>Here is a list of different ways that ATOM Digital help our clients.</p>
 
 
