Adding Rate Card

--- a/index.html
+++ b/index.html
@@ -70,6 +70,16 @@
 
         <!-- One -->
         <section id="one" class="tiles"><article>
+    <a href="/software-consultancy-rate-card/" class="link">
+      <span class="image">
+        <img src="" alt="Rate Card" />
+      </span>
+      <header class="major">
+        <h2>Rate Card</a></h2>
+        <p></p>
+      </header>
+  </a>
+  </article><article>
     <a href="/what-we-do/" class="link">
       <span class="image">
         <img src="" alt="What we do" />
@@ -238,6 +248,8 @@
 					
 				
 			</ul>
+
+			<ul class="footer-links"><li><a href="/software-consultancy-rate-card/">Rate Card</a></li></ul>
 			<ul class="copyright">
 				<li>&copy; Atom Digital</li>
 				<li>Design: <a href="https://html5up.net" target="_blank" rel="nofollow">HTML5 UP</a></li>
