--- a/software-consultancy-rate-card/index.html
+++ b/software-consultancy-rate-card/index.html
@@ -15,8 +15,8 @@
     a professional services website.
 -->
 <head>
-	<title>What we do | Atom Digital</title>
-	<meta name="description" content="Atom">
+	<title>Rate Card | Atom Digital</title>
+	<meta name="description" content="Software Consultancy Rate Card Australia | ATOM Digital">
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<!--[if lte IE 8]><script src="/assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -57,24 +57,65 @@
 			
 			<div class="inner">
 				<header class="major">
-					<h1>What we do</h1>
+					<h1>Rate Card</h1>
 				</header>
 				<span id="scroller"></span>
-				<p>ATOM Digital is a business software consultancy.</p>
+				<p>ATOM Digital believes in honest and transparent pricing for its services.</p>
 
-<p>We specialise in helping SMEs and SMBs who do not have a dedicated technical resource.
-We act as an extension of our client’s team and provide the skills and expertise to support their business goals.</p>
+<p>We have researched the market extensively to identify a fair market rate so that we can be competitive and affordable for our clients, while delivering an excellent level of service.</p>
 
-<p>Our mission is to make digital tools more accessible and more available so that our clients can increase sales, reduce costs and improve productivity.</p>
+<h2 id="20222023-software-consultancy-rate-card---australia">2022/2023 Software Consultancy Rate Card - Australia</h2>
 
-<h2 id="our-role-and-focus">Our Role and focus</h2>
-<ul>
-  <li>Provide strategic leadership and analysis to identify the biggest opportunities for our clients.</li>
-  <li>Identify suitable digital tools and services, including defining the scope and carrying out vendor selection.</li>
-  <li>Oversee the change management process, including documentation, people management, communication, process change and risk mitigation.</li>
-  <li>Provide coaching and training for management and key employees.</li>
-  <li>Provide monitoring, maintenance and support for digital tools and services.</li>
-</ul>
+<table>
+  <thead>
+    <tr>
+      <th>&nbsp;</th>
+      <th><nobr>Hourly rate</nobr><br />Ex GST</th>
+      <th>Examples of work</th>
+      <th>Minimum hours</th>
+      <th>SFIA Levels</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td data-label="Engagement Type"><strong>Administrative Support</strong></td>
+      <td data-label="Hourly Rate Ex GST">$120<span class="small-number">.00</span></td>
+      <td data-label="Examples">Data Entry<br />Basic system configuration<br />User management (reset passwords, create users)</td>
+      <td data-label="Minimum Hours">4</td>
+      <td data-label="SFIA Levels"><a href="https://sfia-online.org/en/sfia-8/responsibilities/level-3">SFIA Level 4</a><br /><a href="https://sfia-online.org/en/sfia-8/responsibilities/level-4">SFIA Level 5</a></td>
+    </tr>
+    <tr>
+      <td data-label="Engagement Type"><strong>Level 1</strong><br />Intermediate</td>
+      <td data-label="Hourly Rate Ex GST">$160<span class="small-number">.00</span></td>
+      <td data-label="Examples">Advanced system configuration<br />Create or fix Excel Spreadsheet<br />Basic automation using tools like Zapier or Integromat<br />Data Cleaning and Validation</td>
+      <td data-label="Minimum Hours">4</td>
+      <td data-label="SFIA Levels"><a href="https://sfia-online.org/en/sfia-8/responsibilities/level-5">SFIA Level 5</a></td>
+    </tr>
+    <tr>
+      <td data-label="Engagement Type"><strong>Level 2</strong><br />Advanced</td>
+      <td data-label="Hourly Rate Ex GST">$175<span class="small-number">.00</span></td>
+      <td>Complex automation with a custom process<br />Systems and Data Integration<br />Research and implementation of a new systems<br />Training and documentation</td>
+      <td data-label="Minimum Hours">10</td>
+      <td data-label="SFIA Levels"><a href="https://sfia-online.org/en/sfia-8/responsibilities/level-6">SFIA Level 4</a></td>
+    </tr>
+    <tr>
+      <td data-label="Engagement Type"><strong>Level 3</strong><br />Senior</td>
+      <td data-label="Hourly Rate Ex GST">$250<span class="small-number">.00</span></td>
+      <td data-label="Examples">Highest level of strategic advice and planning<br />Project Management<br />Emergency assistance to fix existing issues month</td>
+      <td data-label="Minimum Hours">10</td>
+      <td data-label="SFIA Levels"><a href="https://sfia-online.org/en/sfia-8/responsibilities/level-7">SFIA Level 7</a></td>
+    </tr>
+  </tbody>
+</table>
+
+<h3 id="what-is-sfia">What is SFIA?</h3>
+<p>SFIA defines the skills and competencies required by professionals who design, develop, implement, manage and protect the data and technology that power the digital world.</p>
+
+<p>It is a not-for-profit organisation that aims to set an international framework that can be used to globally for skills and competency for the digital world.</p>
+
+<p>We use SFIA to give a clear indication of the level of skills and ownership that our different levels offer to our clients.</p>
+
+<p>You can read more about SFIA here: https://sfia-online.org/en</p>
 
 			</div>
 		</section>
