--- a/elements/index.html
+++ b/elements/index.html
@@ -566,6 +566,8 @@ print 'It took ' + i + ' iterations to sort the deck.';
 					
 				
 			</ul>
+
+			<ul class="footer-links"><li><a href="/software-consultancy-rate-card/">Rate Card</a></li></ul>
 			<ul class="copyright">
 				<li>&copy; Atom Digital</li>
 				<li>Design: <a href="https://html5up.net" target="_blank" rel="nofollow">HTML5 UP</a></li>
