--- a/landing/index.html
+++ b/landing/index.html
@@ -257,6 +257,8 @@
 					
 				
 			</ul>
+
+			<ul class="footer-links"><li><a href="/software-consultancy-rate-card/">Rate Card</a></li></ul>
 			<ul class="copyright">
 				<li>&copy; Atom Digital</li>
 				<li>Design: <a href="https://html5up.net" target="_blank" rel="nofollow">HTML5 UP</a></li>
