--- a/software-consultancy-rate-card/index.html
+++ b/software-consultancy-rate-card/index.html
@@ -82,28 +82,28 @@
       <td data-label="Hourly Rate Ex GST">$120<span class="small-number">.00</span></td>
       <td data-label="Examples">Data Entry<br />Basic system configuration<br />User management (reset passwords, create users)</td>
       <td data-label="Minimum Hours">4</td>
-      <td data-label="SFIA Levels"><a href="https://sfia-online.org/en/sfia-8/responsibilities/level-3">SFIA Level 4</a><br /><a href="https://sfia-online.org/en/sfia-8/responsibilities/level-4">SFIA Level 5</a></td>
+      <td data-label="SFIA Levels"><a href="https://sfia-online.org/en/sfia-8/responsibilities/level-3" target="_blank">SFIA Level 4</a><br /><a href="https://sfia-online.org/en/sfia-8/responsibilities/level-4" target="_blank">SFIA Level 5</a></td>
     </tr>
     <tr>
       <td data-label="Engagement Type"><strong>Level 1</strong><br />Intermediate</td>
       <td data-label="Hourly Rate Ex GST">$160<span class="small-number">.00</span></td>
       <td data-label="Examples">Advanced system configuration<br />Create or fix Excel Spreadsheet<br />Basic automation using tools like Zapier or Integromat<br />Data Cleaning and Validation</td>
       <td data-label="Minimum Hours">4</td>
-      <td data-label="SFIA Levels"><a href="https://sfia-online.org/en/sfia-8/responsibilities/level-5">SFIA Level 5</a></td>
+      <td data-label="SFIA Levels"><a href="https://sfia-online.org/en/sfia-8/responsibilities/level-5" target="_blank">SFIA Level 5</a></td>
     </tr>
     <tr>
       <td data-label="Engagement Type"><strong>Level 2</strong><br />Advanced</td>
       <td data-label="Hourly Rate Ex GST">$175<span class="small-number">.00</span></td>
       <td>Complex automation with a custom process<br />Systems and Data Integration<br />Research and implementation of a new systems<br />Training and documentation</td>
       <td data-label="Minimum Hours">10</td>
-      <td data-label="SFIA Levels"><a href="https://sfia-online.org/en/sfia-8/responsibilities/level-6">SFIA Level 4</a></td>
+      <td data-label="SFIA Levels"><a href="https://sfia-online.org/en/sfia-8/responsibilities/level-6" target="_blank">SFIA Level 4</a></td>
     </tr>
     <tr>
       <td data-label="Engagement Type"><strong>Level 3</strong><br />Senior</td>
       <td data-label="Hourly Rate Ex GST">$250<span class="small-number">.00</span></td>
       <td data-label="Examples">Highest level of strategic advice and planning<br />Project Management<br />Emergency assistance to fix existing issues month</td>
       <td data-label="Minimum Hours">10</td>
-      <td data-label="SFIA Levels"><a href="https://sfia-online.org/en/sfia-8/responsibilities/level-7">SFIA Level 7</a></td>
+      <td data-label="SFIA Levels"><a href="https://sfia-online.org/en/sfia-8/responsibilities/level-7" target="_blank">SFIA Level 7</a></td>
     </tr>
   </tbody>
 </table>
