--- a/your-url/index.html
+++ b/your-url/index.html
@@ -15,8 +15,8 @@
     a professional services website.
 -->
 <head>
-	<title>2022/2023 Software Consultancy Rate Card -  Australia | Atom Digital</title>
-	<meta name="description" content="Software Consultancy Rate Card Australia | ATOM Digital">
+	<title>SEO Title used in Layout | Atom Digital</title>
+	<meta name="description" content="SEO Meta Desicription">
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<!--[if lte IE 8]><script src="/assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -57,66 +57,11 @@
 			
 			<div class="inner">
 				<header class="major">
-					<h1>Software Consultancy Rate Card</h1>
+					<h1>Title to show on page</h1>
 				</header>
 				
 				<span id="scroller"></span>
-				<p>ATOM Digital believes in honest and transparent pricing for its services.</p>
-
-<p>We have researched the market extensively to identify a fair market rate so that we can be competitive and affordable for our clients, while delivering an excellent level of service.</p>
-
-<h2 id="20222023-software-consultancy-rate-card---australia">2022/2023 Software Consultancy Rate Card - Australia</h2>
-
-<table>
-  <thead>
-    <tr>
-      <th>&nbsp;</th>
-      <th><nobr>Hourly rate</nobr><br />Ex GST</th>
-      <th>Examples of work</th>
-      <th>Minimum hours</th>
-      <th>SFIA Levels</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td data-label="Engagement Type"><strong>Administrative Support</strong></td>
-      <td data-label="Hourly Rate Ex GST">$120<span class="small-number">.00</span></td>
-      <td data-label="Examples"><br />Data Entry<br />Basic system configuration<br />User management (reset passwords, create users)</td>
-      <td data-label="Minimum Hours">4</td>
-      <td data-label="SFIA Levels"><a href="https://sfia-online.org/en/sfia-8/responsibilities/level-3" target="_blank">SFIA Level 4</a><br /><a href="https://sfia-online.org/en/sfia-8/responsibilities/level-4" target="_blank">SFIA Level 5</a></td>
-    </tr>
-    <tr>
-      <td data-label="Engagement Type"><strong>Level 1</strong><br />Intermediate</td>
-      <td data-label="Hourly Rate Ex GST">$160<span class="small-number">.00</span></td>
-      <td data-label="Examples"><br />Advanced system configuration<br />Create or fix Excel Spreadsheet<br />Basic automation using tools like Zapier or Integromat<br />Data Cleaning and Validation<br />Website Development</td>
-      <td data-label="Minimum Hours">4</td>
-      <td data-label="SFIA Levels"><a href="https://sfia-online.org/en/sfia-8/responsibilities/level-5" target="_blank">SFIA Level 5</a></td>
-    </tr>
-    <tr>
-      <td data-label="Engagement Type"><strong>Level 2</strong><br />Advanced</td>
-      <td data-label="Hourly Rate Ex GST">$175<span class="small-number">.00</span></td>
-      <td data-label="Examples"><br />Complex automation with a custom process<br />Systems and Data Integration<br />Call Center / UCaaS Configuration<br />Research and implementation of a new systems<br />Training and documentation</td>
-      <td data-label="Minimum Hours">10</td>
-      <td data-label="SFIA Levels"><a href="https://sfia-online.org/en/sfia-8/responsibilities/level-6" target="_blank">SFIA Level 4</a></td>
-    </tr>
-    <tr>
-      <td data-label="Engagement Type"><strong>Level 3</strong><br />Senior</td>
-      <td data-label="Hourly Rate Ex GST">$250<span class="small-number">.00</span></td>
-      <td data-label="Examples"><br />Highest level of strategic advice and planning<br />Project Management<br />Emergency assistance to fix existing issues month</td>
-      <td data-label="Minimum Hours">10</td>
-      <td data-label="SFIA Levels"><a href="https://sfia-online.org/en/sfia-8/responsibilities/level-7" target="_blank">SFIA Level 7</a></td>
-    </tr>
-  </tbody>
-</table>
-
-<h3 id="what-is-sfia">What is SFIA?</h3>
-<p>SFIA defines the skills and competencies required by professionals who design, develop, implement, manage and protect the data and technology that power the digital world.</p>
-
-<p>It is a not-for-profit organisation that aims to set an international framework that can be used globally to define skills and competency for the digital world.</p>
-
-<p>We use SFIA to give a clear indication of the level of skills and ownership that our different levels offer to our clients.</p>
-
-<p>You can read more about SFIA here: <a href="https://sfia-online.org/en" target="_blank">https://sfia-online.org/en</a></p>
+				
 
 			</div>
 		</section>
