--- a/all_posts/index.html
+++ b/all_posts/index.html
@@ -42,7 +42,7 @@
 
 <!-- Menu -->
 <nav id="menu">
-	<ul class="links"><li><a href="/" class="link">Home</a></li><li><a href="/what-we-do/">What we do</a></li><li><a href="/services/">Our Services</a></li><li><a href="/examples-of-digital-transformation/">Examples</a></li><li><a href="/about/">About Us</a></li></ul>
+	<ul class="links"><li><a href="/" class="link">Home</a></li><li><a href="/what-we-do/">What we do</a></li><li><a href="/services/">Our Services</a></li><li><a href="/examples-of-digital-transformation/">Examples</a></li><li><a href="/about/">About Us</a></li><li><a href="/free-resources">Free Resources</a></li></ul>
 	<ul class="actions vertical">
 		<li><a href="#contact-us" class="button special fit">Contact Us</a></li>
 		<!--<li><a href="#" class="button fit">Log In</a></li>-->
@@ -62,7 +62,7 @@
         <header class="major">
           <h1>Welcome to Jekyll!</h1>
         </header>
-        
+        <span class="image main"><img src="/assets/images/scott-graham-5fNmWej4tAA-unsplash-864x259.jpg" alt="" /></span>
         <p>2022-07-22 13:00:22 +1000</p>
         <p><p>You’ll find this post in your <code class="language-plaintext highlighter-rouge">_posts</code> directory. Go ahead and edit it and re-build the site to see your changes. You can rebuild the site in many different ways, but the most common way is to run <code class="language-plaintext highlighter-rouge">jekyll serve</code>, which launches a web server and auto-regenerates your site when a file is updated.</p>
 
@@ -199,7 +199,7 @@
 				
 			</ul>
 
-			<ul class="footer-links"><li><a href="/software-consultancy-rate-card/">Rate Card</a></li></ul>
+			<ul class="footer-links"><li><a href="/software-consultancy-rate-card/">Software Consultancy Rate Card</a></li><li><a href="/your-url/">Title to show on page</a></li></ul>
 			<ul class="copyright">
 				<li>&copy; Atom Digital</li>
 				<li>Design: <a href="https://html5up.net" target="_blank" rel="nofollow">HTML5 UP</a></li>
