--- a/what-we-do/index.html
+++ b/what-we-do/index.html
@@ -43,7 +43,7 @@
 
 <!-- Menu -->
 <nav id="menu">
-	<ul class="links"><li><a href="/" class="link">Home</a></li><li><a href="/what-we-do/">What we do</a></li><li><a href="/services/">Our Services</a></li><li><a href="/examples-of-digital-transformation/">Examples</a></li><li><a href="/about/">About Us</a></li></ul>
+	<ul class="links"><li><a href="/" class="link">Home</a></li><li><a href="/what-we-do/">What we do</a></li><li><a href="/services/">Our Services</a></li><li><a href="/examples-of-digital-transformation/">Examples</a></li><li><a href="/about/">About Us</a></li><li><a href="/free-resources">Free Resources</a></li></ul>
 	<ul class="actions vertical">
 		<li><a href="#contact-us" class="button special fit">Contact Us</a></li>
 		<!--<li><a href="#" class="button fit">Log In</a></li>-->
@@ -59,6 +59,8 @@
 				<header class="major">
 					<h1>What we do</h1>
 				</header>
+				<span class="image main"><img src="/assets/images/scott-graham-5fNmWej4tAA-unsplash-864x259.jpg"
+					alt="Business people writing on a notepad in front of two laptop screens" /></span>
 				<span id="scroller"></span>
 				<p>ATOM Digital is a business software consultancy.</p>
 
@@ -188,7 +190,7 @@ We act as an extension of our client’s team and provide the skills and experti
 				
 			</ul>
 
-			<ul class="footer-links"><li><a href="/software-consultancy-rate-card/">Rate Card</a></li></ul>
+			<ul class="footer-links"><li><a href="/software-consultancy-rate-card/">Software Consultancy Rate Card</a></li><li><a href="/your-url/">Title to show on page</a></li></ul>
 			<ul class="copyright">
 				<li>&copy; Atom Digital</li>
 				<li>Design: <a href="https://html5up.net" target="_blank" rel="nofollow">HTML5 UP</a></li>
