Adding images to pages

--- a/index.html
+++ b/index.html
@@ -39,15 +39,17 @@
 		<a href="#menu">Menu</a>
 	</nav>
 </header>
-
 <!-- Menu -->
 <nav id="menu">
-	<ul class="links"><li><a href="/" class="link">Home</a></li><li><a href="/what-we-do/">What we do</a></li><li><a href="/services/">Our Services</a></li><li><a href="/examples-of-digital-transformation/">Examples</a></li><li><a href="/about/">About Us</a></li><li><a href="/free-resources">Free Resources</a></li></ul>
+	<ul class="links"><li><a href="/" class="link">Home</a></li><li><a href="/what-we-do/">What we do</a></li><li><a href="/services/">Our Services</a></li><li><a href="/examples-of-digital-transformation/">Examples</a></li><li><a href="/about/">About Us</a></li><!--<li><li><a href="/free-resources/" class="Link">Free Resources</a></li>-->
+		<!--<li><a href="#" class="button fit">Log In</a></li>-->
+	</ul>
 	<ul class="actions vertical">
 		<li><a href="#contact-us" class="button special fit">Contact Us</a></li>
 		<!--<li><a href="#" class="button fit">Log In</a></li>-->
 	</ul>
 </nav>
+
 
 
     <!-- Banner -->
@@ -74,41 +76,41 @@
       <span class="image">
         <img src="assets/images/scott-graham-5fNmWej4tAA-unsplash-864x259.jpg" alt="What we do" />
       </span>
+    </a>
       <header class="major">
-        <h2>What we do</a></h2>
+        <h2>What we do</h2>
         <p>We help our clients to adopt digital tools and services that increase sales, reduce costs and improve productivity.</p>
       </header>
-  </a>
   </article><article>
     <a href="/services/" class="link">
       <span class="image">
-        <img src="" alt="Our Services" />
+        <img src="assets/images/riccardo-annandale-7e2pe9wjL9M-unsplash-864-259.jpg" alt="Our Services" />
       </span>
+    </a>
       <header class="major">
-        <h2>Our Services</a></h2>
+        <h2>Our Services</h2>
         <p>Working with ATOM Digital gives our clients access to specialists, technical resources.</p>
       </header>
-  </a>
   </article><article>
     <a href="/examples-of-digital-transformation/" class="link">
       <span class="image">
-        <img src="" alt="Examples" />
+        <img src="assets/images/sajad-nori-LWD60a5a15I-unsplash-864x259.jpg" alt="Examples" />
       </span>
+    </a>
       <header class="major">
-        <h2>Examples</a></h2>
+        <h2>Examples</h2>
         <p>There are many ways that ATOM Digital can help.<br> Here are just some of them</p>
       </header>
-  </a>
   </article><article>
     <a href="/about/" class="link">
       <span class="image">
-        <img src="" alt="About Us" />
+        <img src="assets/images/annie-spratt-QckxruozjRg-unsplash-864x259.jpg" alt="About Us" />
       </span>
+    </a>
       <header class="major">
-        <h2>About Us</a></h2>
+        <h2>About Us</h2>
         <p>About ATOM Digital<br>Business Software Consultancy</p>
       </header>
-  </a>
   </article></section>
 
 
@@ -239,7 +241,7 @@
 				
 			</ul>
 
-			<ul class="footer-links"><li><a href="/software-consultancy-rate-card/">Software Consultancy Rate Card</a></li><li><a href="/your-url/">Title to show on page</a></li></ul>
+			<ul class="footer-links"><li><a href="/software-consultancy-rate-card/">Software Consultancy Rate Card</a></li></ul>
 			<ul class="copyright">
 				<li>&copy; Atom Digital</li>
 				<li>Design: <a href="https://html5up.net" target="_blank" rel="nofollow">HTML5 UP</a></li>
