--- a/generic/index.html
+++ b/generic/index.html
@@ -39,15 +39,17 @@
 		<a href="#menu">Menu</a>
 	</nav>
 </header>
-
 <!-- Menu -->
 <nav id="menu">
-	<ul class="links"><li><a href="/" class="link">Home</a></li><li><a href="/what-we-do/">What we do</a></li><li><a href="/services/">Our Services</a></li><li><a href="/examples-of-digital-transformation/">Examples</a></li><li><a href="/about/">About Us</a></li><li><a href="/free-resources">Free Resources</a></li></ul>
+	<ul class="links"><li><a href="/" class="link">Home</a></li><li><a href="/what-we-do/">What we do</a></li><li><a href="/services/">Our Services</a></li><li><a href="/examples-of-digital-transformation/">Examples</a></li><li><a href="/about/">About Us</a></li><!--<li><li><a href="/free-resources/" class="Link">Free Resources</a></li>-->
+		<!--<li><a href="#" class="button fit">Log In</a></li>-->
+	</ul>
 	<ul class="actions vertical">
 		<li><a href="#contact-us" class="button special fit">Contact Us</a></li>
 		<!--<li><a href="#" class="button fit">Log In</a></li>-->
 	</ul>
 </nav>
+
 
 
 
@@ -182,7 +184,7 @@
 				
 			</ul>
 
-			<ul class="footer-links"><li><a href="/software-consultancy-rate-card/">Software Consultancy Rate Card</a></li><li><a href="/your-url/">Title to show on page</a></li></ul>
+			<ul class="footer-links"><li><a href="/software-consultancy-rate-card/">Software Consultancy Rate Card</a></li></ul>
 			<ul class="copyright">
 				<li>&copy; Atom Digital</li>
 				<li>Design: <a href="https://html5up.net" target="_blank" rel="nofollow">HTML5 UP</a></li>
