--- a/services/index.html
+++ b/services/index.html
@@ -40,15 +40,17 @@
 		<a href="#menu">Menu</a>
 	</nav>
 </header>
-
 <!-- Menu -->
 <nav id="menu">
-	<ul class="links"><li><a href="/" class="link">Home</a></li><li><a href="/what-we-do/">What we do</a></li><li><a href="/services/">Our Services</a></li><li><a href="/examples-of-digital-transformation/">Examples</a></li><li><a href="/about/">About Us</a></li><li><a href="/free-resources">Free Resources</a></li></ul>
+	<ul class="links"><li><a href="/" class="link">Home</a></li><li><a href="/what-we-do/">What we do</a></li><li><a href="/services/">Our Services</a></li><li><a href="/examples-of-digital-transformation/">Examples</a></li><li><a href="/about/">About Us</a></li><!--<li><li><a href="/free-resources/" class="Link">Free Resources</a></li>-->
+		<!--<li><a href="#" class="button fit">Log In</a></li>-->
+	</ul>
 	<ul class="actions vertical">
 		<li><a href="#contact-us" class="button special fit">Contact Us</a></li>
 		<!--<li><a href="#" class="button fit">Log In</a></li>-->
 	</ul>
 </nav>
+
 
 	<!-- Main -->
 	<div id="main" class="alt">
@@ -59,7 +61,8 @@
 				<header class="major">
 					<h1>Our Services</h1>
 				</header>
-				
+				<span class="image main"><img src="/assets/images/riccardo-annandale-7e2pe9wjL9M-unsplash-864-259.jpg"
+					alt="Mobile device showing a chart going upwards" /></span>
 				<span id="scroller"></span>
 				<p>ATOM Digital provides our clients access to specialists, technical resources.</p>
 <p>It allows our clients to focus on what they do best -  running their business -  while we own and manage their technical landscape.</p>
@@ -257,7 +260,7 @@
 				
 			</ul>
 
-			<ul class="footer-links"><li><a href="/software-consultancy-rate-card/">Software Consultancy Rate Card</a></li><li><a href="/your-url/">Title to show on page</a></li></ul>
+			<ul class="footer-links"><li><a href="/software-consultancy-rate-card/">Software Consultancy Rate Card</a></li></ul>
 			<ul class="copyright">
 				<li>&copy; Atom Digital</li>
 				<li>Design: <a href="https://html5up.net" target="_blank" rel="nofollow">HTML5 UP</a></li>
