Update favicon text on pages

--- a/examples-of-digital-transformation/index.html
+++ b/examples-of-digital-transformation/index.html
@@ -61,11 +61,11 @@
 				<header class="major">
 					<h1>Examples</h1>
 				</header>
+				There are many ways that ATOM Digital can help your business.
 				<span class="image main"><img src="/assets/images/sajad-nori-LWD60a5a15I-unsplash-864x259.jpg"
 					alt="" /></span>
 				<span id="scroller"></span>
-				<p>Here is a list of different ways that ATOM Digital help our clients.</p>
-
+				
 
 <span id="top"></span>
 
