--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     </a>
       <header class="major">
         <h2>Examples</h2>
-        <p>There are many ways that ATOM Digital can help.<br> Here are just some of them</p>
+        <p>There are many ways that ATOM Digital can help your business.</p>
       </header>
   </article><article>
     <a href="/about/" class="link">
