--- a/what-we-do/index.html
+++ b/what-we-do/index.html
@@ -61,6 +61,7 @@
 				<header class="major">
 					<h1>What we do</h1>
 				</header>
+				We help our clients to adopt digital tools and services that increase sales, reduce costs and improve productivity.
 				<span class="image main"><img src="/assets/images/scott-graham-5fNmWej4tAA-unsplash-864x259.jpg"
 					alt="Business people writing on a notepad in front of two laptop screens" /></span>
 				<span id="scroller"></span>
