--- a/your-url/index.html
+++ b/your-url/index.html
@@ -61,6 +61,7 @@
 				<header class="major">
 					<h1>Title to show on page</h1>
 				</header>
+				Tile Description. Short.
 				
 				<span id="scroller"></span>
 				
