--- a/about/index.html
+++ b/about/index.html
@@ -61,6 +61,7 @@
 				<header class="major">
 					<h1>About Us</h1>
 				</header>
+				About ATOM Digital<br>Business Software Consultancy
 				<span class="image main"><img src="/assets/images/annie-spratt-QckxruozjRg-unsplash-864x259.jpg"
 					alt="A team of people working at a desk on laptops" /></span>
 				<span id="scroller"></span>
