--- a/services/index.html
+++ b/services/index.html
@@ -61,11 +61,11 @@
 				<header class="major">
 					<h1>Our Services</h1>
 				</header>
+				Working with ATOM Digital gives our clients access to specialists, technical resources.
 				<span class="image main"><img src="/assets/images/riccardo-annandale-7e2pe9wjL9M-unsplash-864-259.jpg"
 					alt="Mobile device showing a chart going upwards" /></span>
 				<span id="scroller"></span>
-				<p>ATOM Digital provides our clients access to specialists, technical resources.</p>
-<p>It allows our clients to focus on what they do best -  running their business -  while we own and manage their technical landscape.</p>
+				<p>It allows our clients to focus on what they do best -  running their business -  while we own and manage their technical landscape.</p>
 <p>Typically we help our clients to increase sales, reduce costs and improve productivity in the following ways.</p>
 <div class="row">
     <div class="6u 12u$(small)">
