Updating rate card style and css

--- a/software-consultancy-rate-card/index.html
+++ b/software-consultancy-rate-card/index.html
@@ -84,28 +84,56 @@
     <tr>
       <td data-label="Engagement Type"><strong>Administrative Support</strong></td>
       <td data-label="Hourly Rate Ex GST">$120<span class="small-number">.00</span></td>
-      <td data-label="Examples"><br />Data Entry<br />Basic system configuration<br />User management (reset passwords, create users)</td>
+      <td data-label="Examples" class="rate-examples"><br />
+        <ul>
+          <li>Data Entry</li>
+          <li>Basic system configuration</li>
+          <li>User management (reset passwords, create users)</li>
+        </ul>
+      </td>
       <td data-label="Minimum Hours">4</td>
       <td data-label="SFIA Levels"><a href="https://sfia-online.org/en/sfia-8/responsibilities/level-3" target="_blank">SFIA Level 4</a><br /><a href="https://sfia-online.org/en/sfia-8/responsibilities/level-4" target="_blank">SFIA Level 5</a></td>
     </tr>
     <tr>
       <td data-label="Engagement Type"><strong>Level 1</strong><br />Intermediate</td>
       <td data-label="Hourly Rate Ex GST">$160<span class="small-number">.00</span></td>
-      <td data-label="Examples"><br />Advanced system configuration<br />Create or fix Excel Spreadsheet<br />Basic automation using tools like Zapier or Integromat<br />Data Cleaning and Validation<br />Website Development</td>
+      <td data-label="Examples" class="rate-examples"><br />
+        <ul>
+          <li>Advanced system configuration</li>
+          <li>Create or fix Excel Spreadsheet</li>
+          <li>Basic automation using tools like Zapier or Integromat</li>
+          <li>Data Cleaning and Validation</li>
+          <li>Website Development</li>
+        </ul>
+      </td>
       <td data-label="Minimum Hours">4</td>
       <td data-label="SFIA Levels"><a href="https://sfia-online.org/en/sfia-8/responsibilities/level-5" target="_blank">SFIA Level 5</a></td>
     </tr>
     <tr>
       <td data-label="Engagement Type"><strong>Level 2</strong><br />Advanced</td>
       <td data-label="Hourly Rate Ex GST">$175<span class="small-number">.00</span></td>
-      <td data-label="Examples"><br />Complex automation with a custom process<br />Systems and Data Integration<br />Call Center / UCaaS Configuration<br />Research and implementation of a new systems<br />Training and documentation</td>
+      <td data-label="Examples" class="rate-examples"><br />
+        <ul>
+          <li>Complex automation with a custom process</li>
+          <li>Systems and Data Integration</li>
+          <li>Call Center / UCaaS Configuration</li>
+          <li>Research and implementation of a new systems</li>
+          <li>Training and documentation</li>
+        </ul>
+      </td>
       <td data-label="Minimum Hours">10</td>
       <td data-label="SFIA Levels"><a href="https://sfia-online.org/en/sfia-8/responsibilities/level-6" target="_blank">SFIA Level 4</a></td>
     </tr>
     <tr>
       <td data-label="Engagement Type"><strong>Level 3</strong><br />Senior</td>
       <td data-label="Hourly Rate Ex GST">$250<span class="small-number">.00</span></td>
-      <td data-label="Examples"><br />Highest level of strategic advice and planning<br />Project Management<br />Emergency assistance to fix existing issues month</td>
+      <td data-label="Examples" class="rate-examples"><br />
+        <ul>
+          <li>Highest level of strategic advice and planning</li>
+          <li>Project Management</li>
+          <li>Emergency assistance to fix existing issues month</li>
+        </ul>
+      </td>
       <td data-label="Minimum Hours">10</td>
       <td data-label="SFIA Levels"><a href="https://sfia-online.org/en/sfia-8/responsibilities/level-7" target="_blank">SFIA Level 7</a></td>
     </tr>
