--- a/free-resources/new-page.html
+++ b/free-resources/new-page.html
@@ -80,7 +80,7 @@
 					<h3>Contact Us</h3>
 					<p>We offer a free, no obligation consultation to discuss your software needs. Please contact us on the email below and one of our team will get in touch.</p>
 					<div>
-						<input size="28" id="contactme" value="contact (at) atomdigital.com.au" onClick="contactMeSelect(this)" onfocusout="hideMessage()"></input>
+						<input aria-label="contact" size="28" id="contactme" value="contact (at) atomdigital.com.au" onClick="contactMeSelect(this)" onfocusout="hideMessage()"></input>
 						<div style="display:none" id="contactSelected">Address selected. Ready to be copied.</div>
 						<script>
 							var input = document.getElementById("contactme");
