Upper case for ATOM

--- a/elements/index.html
+++ b/elements/index.html
@@ -15,8 +15,8 @@
     a professional services website.
 -->
 <head>
-	<title>Elements | Atom Digital</title>
-	<meta name="description" content="Atom">
+	<title>Elements | ATOM Digital</title>
+	<meta name="description" content="ATOM">
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<!--[if lte IE 8]><script src="/assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -35,7 +35,7 @@
 
 <!-- Header -->
 <header id="header"class="alt">
-	<a href="/" class="logo"><strong>Atom</strong> <span>Digital</span></a>
+	<a href="/" class="logo"><strong>ATOM</strong> <span>Digital</span></a>
 	<nav>
 		<a href="#menu">Menu</a>
 	</nav>
@@ -573,7 +573,7 @@ print 'It took ' + i + ' iterations to sort the deck.';
 
 			<ul class="footer-links"><li><a href="/software-consultancy-rate-card/">Software Consultancy Rate Card</a></li></ul>
 			<ul class="copyright">
-				<li>&copy; Atom Digital</li>
+				<li>&copy; ATOM Digital</li>
 				<li>Design: <a href="https://html5up.net" target="_blank" rel="nofollow">HTML5 UP</a></li>
 			</ul>
 		</div>
