--- a/free-resources.html
+++ b/free-resources.html
@@ -15,7 +15,7 @@
     a professional services website.
 -->
 <head>
-	<title>Free software resources for business | ATOM Digital | Atom Digital</title>
+	<title>Free software resources for business | ATOM Digital | ATOM Digital</title>
 	<meta name="description" content="A set of free tools and resources for business owners and managers from ATOM Digital">
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -34,7 +34,7 @@
 
 <!-- Header -->
 <header id="header"class="alt">
-	<a href="/" class="logo"><strong>Atom</strong> <span>Digital</span></a>
+	<a href="/" class="logo"><strong>ATOM</strong> <span>Digital</span></a>
 	<nav>
 		<a href="#menu">Menu</a>
 	</nav>
@@ -201,7 +201,7 @@
 
 			<ul class="footer-links"><li><a href="/software-consultancy-rate-card/">Software Consultancy Rate Card</a></li></ul>
 			<ul class="copyright">
-				<li>&copy; Atom Digital</li>
+				<li>&copy; ATOM Digital</li>
 				<li>Design: <a href="https://html5up.net" target="_blank" rel="nofollow">HTML5 UP</a></li>
 			</ul>
 		</div>
