--- a/software-consultancy-rate-card/index.html
+++ b/software-consultancy-rate-card/index.html
@@ -15,7 +15,7 @@
     a professional services website.
 -->
 <head>
-	<title>2022/2023 Software Consultancy Rate Card -  Australia | Atom Digital</title>
+	<title>2022/2023 Software Consultancy Rate Card -  Australia | ATOM Digital</title>
 	<meta name="description" content="Software Consultancy Rate Card Australia | ATOM Digital">
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -35,7 +35,7 @@
 
 <!-- Header -->
 <header id="header"class="alt">
-	<a href="/" class="logo"><strong>Atom</strong> <span>Digital</span></a>
+	<a href="/" class="logo"><strong>ATOM</strong> <span>Digital</span></a>
 	<nav>
 		<a href="#menu">Menu</a>
 	</nav>
@@ -263,7 +263,7 @@
 
 			<ul class="footer-links"><li><a href="/software-consultancy-rate-card/">Software Consultancy Rate Card</a></li></ul>
 			<ul class="copyright">
-				<li>&copy; Atom Digital</li>
+				<li>&copy; ATOM Digital</li>
 				<li>Design: <a href="https://html5up.net" target="_blank" rel="nofollow">HTML5 UP</a></li>
 			</ul>
 		</div>
