--- a/software-consultancy-rate-card/index.html
+++ b/software-consultancy-rate-card/index.html
@@ -92,7 +92,12 @@
         </ul>
       </td>
       <td data-label="Minimum Hours">4</td>
-      <td data-label="SFIA Levels"><a href="https://sfia-online.org/en/sfia-8/responsibilities/level-3" target="_blank">SFIA Level 4</a><br /><a href="https://sfia-online.org/en/sfia-8/responsibilities/level-4" target="_blank">SFIA Level 5</a></td>
+      <td data-label="SFIA Levels">
+      <a href="https://sfia-online.org/en/sfia-8/responsibilities/level-3" target="_blank">SFIA Level 4</a>
+      <br />
+      <br />
+      <a href="https://sfia-online.org/en/sfia-8/responsibilities/level-4" target="_blank">SFIA Level 5</a>
+      </td>
     </tr>
     <tr>
       <td data-label="Engagement Type"><strong>Level 1</strong><br />Intermediate</td>
@@ -107,7 +112,8 @@
         </ul>
       </td>
       <td data-label="Minimum Hours">4</td>
-      <td data-label="SFIA Levels"><a href="https://sfia-online.org/en/sfia-8/responsibilities/level-5" target="_blank">SFIA Level 5</a></td>
+      <td data-label="SFIA Levels">
+      <a href="https://sfia-online.org/en/sfia-8/responsibilities/level-5" target="_blank">SFIA Level 5</a></td>
     </tr>
     <tr>
       <td data-label="Engagement Type"><strong>Level 2</strong><br />Advanced</td>
